welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:5: error: not found: value move
move(nbPas: Int,versLAvant: Boolean){
^Program:5: error: not found: value nbPas
move(nbPas: Int,versLAvant: Boolean){
     ^Program:5: error: not found: value versLAvant
move(nbPas: Int,versLAvant: Boolean){
                ^