welcome.lessons.welcome.methods.args.MethodsArgs.scala.code



move(nbPas: Int,versLAvant: Boolean){
  while(!estFaceMur){
    avance()
  }
  
}